Final tweaks/fixes, bump manifest

--- a/Launcher/App/src/main/res/layout/activity_browser.xml
+++ b/Launcher/App/src/main/res/layout/activity_browser.xml
@@ -150,8 +150,8 @@
                 android:layout_marginStart="-25dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:alpha="1"
-                android:background="@android:color/transparent"
+                android:alpha="0.7"
+                android:background="@drawable/bkg_hover_button"
                 android:src="@drawable/web_add_home"
                 android:tooltipText="@string/web_add_home"
                 android:visibility="gone"
