--- a/Launcher/App/src/main/res/drawable/ic_launch_out.xml
+++ b/Launcher/App/src/main/res/drawable/ic_launch_out.xml
@@ -1,5 +1,10 @@
-<vector android:autoMirrored="true" android:height="23dp"
-    android:tint="#FFFFFF" android:viewportHeight="24"
-    android:viewportWidth="24" android:width="23dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M19,19H5V5h7V3H5c-1.11,0 -2,0.9 -2,2v14c0,1.1 0.89,2 2,2h14c1.1,0 2,-0.9 2,-2v-7h-2v7zM14,3v2h3.59l-9.83,9.83 1.41,1.41L19,6.41V10h2V3h-7z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="40dp"
+    android:height="40dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960"
+    android:tint="?attr/colorControlNormal">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M189.06,846.7Q158.06,846.7 135.68,824.32Q113.3,801.94 113.3,770.94L113.3,189.06Q113.3,158 135.68,135.57Q158.06,113.15 189.06,113.15L466,113.15L466,189.06L189.06,189.06Q189.06,189.06 189.06,189.06Q189.06,189.06 189.06,189.06L189.06,770.94Q189.06,770.94 189.06,770.94Q189.06,770.94 189.06,770.94L770.94,770.94Q770.94,770.94 770.94,770.94Q770.94,770.94 770.94,770.94L770.94,494L846.85,494L846.85,770.94Q846.85,801.94 824.43,824.32Q802,846.7 770.94,846.7L189.06,846.7ZM390.14,623.33L337.33,569.86L718.14,189.06L532.67,189.06L532.67,113.15L846.85,113.15L846.85,427.33L770.94,427.33L770.94,242.53L390.14,623.33Z"/>
 </vector>
