--- a/Launcher/App/src/main/res/layout/dialog_group_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_group_details.xml
@@ -42,7 +42,8 @@
             android:layout_height="30dp"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="2dp"
-            android:background="@drawable/ic_star_on"
+            android:src="@drawable/ic_star_on"
+            android:background="@drawable/bkg_hover_button"
             android:foregroundGravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/groupName"
@@ -52,8 +53,8 @@
         <ImageView
             android:id="@+id/deleteGroupButton"
             android:layout_width="40dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="-6dp"
+            android:layout_height="40dp"
+            android:background="@drawable/bkg_hover_button"
             android:foregroundGravity="center"
             android:src="@drawable/ic_uninstall"
             app:layout_constraintBottom_toBottomOf="parent"
