--- a/Launcher/App/src/main/res/layout/dialog_new_website.xml
+++ b/Launcher/App/src/main/res/layout/dialog_new_website.xml
@@ -51,8 +51,8 @@
             style="@android:style/DeviceDefault.ButtonBar"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/ic_info"
-            android:backgroundTint="#FFFFFF"
+            android:background="@drawable/bkg_hover_button"
+            android:foreground="@drawable/ic_info"
             android:textColor="@android:color/white"
             android:tooltipText="@string/info_website"
             app:layout_constraintEnd_toEndOf="parent"
