--- a/Launcher/App/src/main/res/values/styles.xml
+++ b/Launcher/App/src/main/res/values/styles.xml
@@ -34,6 +34,12 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="SettingsText">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingExtra">3sp</item>
+    </style>
+
     <style name="dialog" parent="Theme.AppCompat.Dialog.Alert">
         <item name="windowMinWidthMajor">0%</item>
         <item name="windowMinWidthMinor">0%</item>
