--- a/Launcher/App/src/main/res/values/unsupported_app_prefixes.xml
+++ b/Launcher/App/src/main/res/values/unsupported_app_prefixes.xml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="unsupported_app_prefixes">
-        <item>com.meta.AccountsCenter.pwa</item>
-        <item>com.meta.environment</item>
-        <item>com.oculus.accountscenter</item>
-        <item>com.oculus.avatar2</item>
-        <item>com.oculus.environment</item>
-        <item>com.oculus.helpcenter</item>
         <item>com.oculus.mobile_mrc_setup</item>
         <item>com.oculus.remotedesktop</item>
-        <item>com.oculus.system</item>
-        <item>com.oculus.guidebook</item>
+        <item>com.oculus.systemactivities</item>
+        <item>com.oculus.systempermissions</item>
         <item>com.oculus.vrshell</item>
         <item>com.oculus.shellenv</item>
         <item>com.oculus.extrapermissions</item>
-        <item>com.oculus.os</item>
+        <item>com.oculus.os.chargecontrol</item>
+        <item>com.oculus.os.clearactivity</item>
         <item>com.oculus.integrity</item>
         <item>com.oculus.assistant</item>
-        <item>metapwa</item>
-        <item>oculuspwa</item>
         <!-- Messenger Redirect -->
         <item>com.facebook.orca</item>
         <!-- Fb just doesn't work for some reason -->
