--- a/Launcher/App/src/main/res/layout/activity_main.xml
+++ b/Launcher/App/src/main/res/layout/activity_main.xml
@@ -109,98 +109,103 @@
             tools:ignore="ImageContrastCheck" />
     </eightbitlab.com.blurview.BlurView>
 
-    <LinearLayout
+    <eightbitlab.com.blurview.BlurView
         android:id="@+id/editFooter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="#000000"
-        android:orientation="horizontal"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:visibility="gone"
+        app:blurOverlayColor="#4A000000"
         tools:visibility="visible">
 
         <LinearLayout
-            android:id="@+id/selectionHint"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/bkg_button"
-            android:gravity="center"
-            android:paddingStart="15dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="10dp"
-            android:paddingBottom="10dp">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/selectionHintText"
-
+            <LinearLayout
+                android:id="@+id/selectionHint"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/bkg_button"
+                android:gravity="center"
+                android:paddingStart="15dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="10dp">
+
+                <TextView
+                    android:id="@+id/selectionHintText"
+
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:maxLines="2"
+                    android:singleLine="true"
+                    android:text="@string/selection_hint_none"
+                    android:textColor="@color/ef_colorTextPrimary"
+                    android:textSize="16sp"
+                    tools:ignore="NestedWeights" />
+
+                <ImageView
+                    android:id="@+id/uninstallBulk"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_uninstall"
+                    android:visibility="gone" />
+
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/addWebsite"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom|center_horizontal|end"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="0.3"
+                android:background="@drawable/bkg_button"
+                android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="2"
-                android:singleLine="true"
-                android:text="@string/selection_hint_none"
+                android:paddingStart="15dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="15dp"
+                android:paddingBottom="10dp"
+                android:singleLine="false"
+                android:text="@string/add_website"
                 android:textColor="@color/ef_colorTextPrimary"
-                android:textSize="16sp"
-                tools:ignore="NestedWeights" />
+                android:textSize="16sp" />
 
-            <ImageView
-                android:id="@+id/uninstallBulk"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_uninstall"
-                android:visibility="gone" />
-
+            <TextView
+                android:id="@+id/stopEditing"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom|center_horizontal|end"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="0.3"
+                android:background="@drawable/bkg_button"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:maxLines="2"
+                android:paddingStart="15dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="15dp"
+                android:paddingBottom="10dp"
+                android:text="@string/edit_mode_stop"
+                android:textColor="@color/ef_colorTextPrimary"
+                android:textSize="16sp" />
         </LinearLayout>
 
-
-        <TextView
-            android:id="@+id/addWebsite"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom|center_horizontal|end"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="0.3"
-            android:background="@drawable/bkg_button"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="2"
-            android:paddingStart="15dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="15dp"
-            android:paddingBottom="10dp"
-            android:singleLine="false"
-            android:text="@string/add_website"
-            android:textColor="@color/ef_colorTextPrimary"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/stopEditing"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom|center_horizontal|end"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="0.3"
-            android:background="@drawable/bkg_button"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="2"
-            android:paddingStart="15dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="15dp"
-            android:paddingBottom="10dp"
-            android:text="@string/edit_mode_stop"
-            android:textColor="@color/ef_colorTextPrimary"
-            android:textSize="16sp" />
-    </LinearLayout>
+    </eightbitlab.com.blurview.BlurView>
 
     <FrameLayout
         android:id="@+id/openAnim"
