--- a/Launcher/App/src/main/res/layout/lv_app_icon.xml
+++ b/Launcher/App/src/main/res/layout/lv_app_icon.xml
@@ -61,7 +61,5 @@
         android:maxLines="2"
         android:singleLine="false"
         android:textColor="@android:color/white"
-        android:textSize="16sp"
-        app:strokeColor="#80000000"
-        app:strokeWidth="1.5dp" />
+        android:textSize="16sp"/>
 </LinearLayout>
