--- a/Launcher/App/src/main/res/layout/activity_main.xml
+++ b/Launcher/App/src/main/res/layout/activity_main.xml
@@ -12,15 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:visibility="visible" />
+        android:visibility="visible"
+        tools:visibility="gone" />
 
     <com.threethan.launcher.view.FadingTopScrollView
         android:id="@+id/mainScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:alpha="0"
         android:fadingEdge="vertical"
         android:fadingEdgeLength="65dp"
-        android:requiresFadingEdge="vertical">
+        android:requiresFadingEdge="vertical"
+        tools:visibility="gone">
 
         <LinearLayout
             android:id="@+id/mainScrollInterior"
@@ -29,7 +32,7 @@
             android:orientation="vertical">
 
             <com.threethan.launcher.view.DynamicHeightGridView
-                android:id="@+id/appsViewWide"
+                android:id="@+id/appsViewBanner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -39,7 +42,7 @@
                 android:verticalSpacing="15dp" />
 
             <com.threethan.launcher.view.DynamicHeightGridView
-                android:id="@+id/appsViewIcon"
+                android:id="@+id/appsViewSquare"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -50,64 +53,162 @@
         </LinearLayout>
     </com.threethan.launcher.view.FadingTopScrollView>
 
-    <eightbitlab.com.blurview.BlurView
-        android:id="@+id/blurView0"
+    <LinearLayout
+        android:id="@+id/topBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="22dp"
         android:layout_marginTop="22dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginBottom="11dp"
-        android:background="@drawable/bkg_blur_view"
-        android:minHeight="40dp"
-        android:visibility="visible"
-        app:blurOverlayColor="#46000000">
+        android:layout_marginEnd="22dp"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <eightbitlab.com.blurview.BlurView
+            android:id="@+id/blurViewGroups"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:orientation="horizontal"
-            tools:visibility="gone">
+            android:layout_marginEnd="12dp"
+            android:layout_weight="1"
+            android:background="@drawable/bkg_blur_view"
+            android:minHeight="40dp"
+            android:visibility="visible"
+            app:blurOverlayColor="#46000000">
 
             <GridView
                 android:id="@+id/groupsView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:divider="#00000000"
                 android:dividerHeight="0dp"
                 android:minWidth="100dp"
-                android:padding="0dp" />
-        </LinearLayout>
+                android:padding="0dp"
+                android:visibility="invisible" />
 
-    </eightbitlab.com.blurview.BlurView>
+        </eightbitlab.com.blurview.BlurView>
 
-    <eightbitlab.com.blurview.BlurView
-        android:id="@+id/blurView1"
-        android:layout_width="41dp"
-        android:layout_height="40dp"
-        android:layout_gravity="end"
-        android:layout_marginLeft="20dp"
+        <eightbitlab.com.blurview.BlurView
+            android:id="@+id/blurViewSearchIcon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="end"
+            android:background="@drawable/bkg_blur_view"
+            android:visibility="visible"
+            app:blurOverlayColor="#4A000000"
+            tools:visibility="visible">
+
+            <ImageView
+                android:id="@+id/searchIcon"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="0.5"
+                android:background="@android:color/transparent"
+                android:padding="8dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_search_button"
+                tools:ignore="ImageContrastCheck" />
+
+            <EditText
+                android:id="@+id/searchClickableEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0"
+                android:ems="10"
+                android:inputType="text" />
+        </eightbitlab.com.blurview.BlurView>
+
+        <eightbitlab.com.blurview.BlurView
+            android:id="@+id/blurViewSettingsIcon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="end"
+            android:layout_marginStart="12dp"
+            android:background="@drawable/bkg_blur_view"
+            android:visibility="visible"
+            app:blurOverlayColor="#4A000000"
+            tools:visibility="visible">
+
+            <ImageView
+                android:id="@+id/settingsIcon"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="0.5"
+                android:background="@android:color/transparent"
+                android:padding="8dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_config"
+                tools:ignore="ImageContrastCheck" />
+        </eightbitlab.com.blurview.BlurView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/searchBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="22dp"
         android:layout_marginTop="22dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/bkg_blur_view"
-        android:visibility="invisible"
-        app:blurOverlayColor="#4A000000"
-        tools:visibility="visible">
+        android:layout_marginEnd="22dp"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/settingsIcon"
+        <eightbitlab.com.blurview.BlurView
+            android:id="@+id/blurViewSearchBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0.5"
-            android:background="@android:color/transparent"
-            android:padding="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_config"
-            tools:ignore="ImageContrastCheck" />
-    </eightbitlab.com.blurview.BlurView>
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="@drawable/bkg_blur_view"
+            android:visibility="gone"
+            app:blurOverlayColor="#4A000000"
+            tools:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/searchHintIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="1dp"
+                    android:src="@drawable/ic_search" />
+
+                <com.threethan.launcher.view.EditTextWatched
+                    android:id="@+id/searchText"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:paddingStart="2dp"
+                    android:paddingTop="1dp"
+                    android:paddingEnd="15dp"
+                    android:paddingBottom="0dp"
+                    android:singleLine="true"
+                    android:text="" />
+
+                <FrameLayout
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="end"
+                    android:background="@drawable/bkg_hover_button"
+                    app:blurOverlayColor="#4A000000">
+
+                    <ImageView
+                        android:id="@+id/searchCancelIcon"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
+                        android:padding="8dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_cancel_search"
+                        tools:ignore="ImageContrastCheck" />
+                </FrameLayout>
+            </LinearLayout>
+
+        </eightbitlab.com.blurview.BlurView>
+    </LinearLayout>
 
     <eightbitlab.com.blurview.BlurView
         android:id="@+id/editFooter"
@@ -214,7 +315,8 @@
         android:background="@drawable/bkg_app"
         android:focusable="true"
         android:touchscreenBlocksFocus="true"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="gone">
 
         <ImageView
             android:id="@+id/openIconBg"
@@ -243,7 +345,6 @@
         android:indeterminate="true"
         android:indeterminateTint="#AAAAAA"
         android:theme="@style/ThemeOverlay.Material"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        android:visibility="gone" />
 
 </FrameLayout>
