--- a/Launcher/App/src/main/res/layout/dialog_service_info.xml
+++ b/Launcher/App/src/main/res/layout/dialog_service_info.xml
@@ -25,7 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
-            android:paddingLeft="0dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
             android:text="@string/service_subtitle" />
 
         <TextView
@@ -33,7 +34,7 @@
             android:layout_height="wrap_content"
             android:autofillHints="text"
             android:backgroundTint="@android:color/white"
-            android:minHeight="45sp"
+            android:minHeight="48sp"
             android:text="@string/service_info"
             android:textColor="@android:color/white" />
 
@@ -51,7 +52,7 @@
             android:layout_marginBottom="10dp"
             android:autofillHints="text"
             android:backgroundTint="@android:color/white"
-            android:minHeight="70sp"
+            android:minHeight="78sp"
             android:text="@string/service_message"
             android:textColor="@android:color/white" />
 
